helm/airbyte/resources/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: scheduler
  template:
    metadata:
      labels:
        airbyte: scheduler
    spec:
      serviceAccountName: airbyte-admin
      automountServiceAccountToken: true
      imagePullSecrets:
      - name: regcred
      containers:
        - name: airbyte-scheduler-container
          image: blotout/airbyte-scheduler
          ports:
            - containerPort: 9000 # for heartbeat server
            - containerPort: 9001 # start temporal worker port pool
            - containerPort: 9002
            - containerPort: 9003
            - containerPort: 9004
            - containerPort: 9005
            - containerPort: 9006
            - containerPort: 9007
            - containerPort: 9008
            - containerPort: 9009
            - containerPort: 9010
            - containerPort: 9011
            - containerPort: 9012
            - containerPort: 9013
            - containerPort: 9014
            - containerPort: 9015
            - containerPort: 9016
            - containerPort: 9017
            - containerPort: 9018
            - containerPort: 9019
            - containerPort: 9020
            - containerPort: 9021
            - containerPort: 9022
            - containerPort: 9023
            - containerPort: 9024
            - containerPort: 9025
            - containerPort: 9026
            - containerPort: 9027
            - containerPort: 9028
            - containerPort: 9029
            - containerPort: 9030 # end temporal worker port pool
          volumeMounts:
            - name: airbyte-volume-configs
              mountPath: /configs
            - name: airbyte-volume-workspace
              mountPath: /workspace
      volumes:
        - name: airbyte-volume-workspace
          persistentVolumeClaim:
            claimName: airbyte-volume-workspace
        - name: airbyte-volume-configs
          persistentVolumeClaim:
            claimName: airbyte-volume-configs
