helm/airbyte/resources/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-db-svc
spec:
  type: NodePort
  ports:
    - port: 5432
      protocol: TCP
  selector:
    airbyte: db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-db
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: db
  template:
    metadata:
      labels:
        airbyte: db
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
        - name: airbyte-db-container
          image: blotout/airbyte-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: airbyte-volume-db
              mountPath: /var/lib/postgresql
      volumes:
        - name: airbyte-volume-db
          persistentVolumeClaim:
            claimName: airbyte-volume-db
