helm/airbyte/resources/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-server-svc
spec:
  type: NodePort
  ports:
    - port: 8001
      protocol: TCP
  selector:
    airbyte: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-server
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: server
  template:
    metadata:
      labels:
        airbyte: server
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: airbyte
                    operator: In
                    values:
                      - scheduler
              topologyKey: kubernetes.io/hostname
      imagePullSecrets:
      - name: regcred
      containers:
        - name: airbyte-server-container
          image: blotout/airbyte-server
          ports:
            - containerPort: 8001
          volumeMounts:
            - name: airbyte-volume-configs
              mountPath: /configs
            - name: airbyte-volume-workspace
              mountPath: /workspace
      volumes:
        - name: airbyte-volume-workspace
          persistentVolumeClaim:
            claimName: airbyte-volume-workspace
        - name: airbyte-volume-configs
          persistentVolumeClaim:
            claimName: airbyte-volume-configs
