helm/airbyte/resources/temporal.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-temporal-svc
spec:
  type: NodePort
  ports:
    - port: 7233
      protocol: TCP
  selector:
    airbyte: temporal
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-temporal
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: temporal
  template:
    metadata:
      labels:
        airbyte: temporal
    spec:
      containers:
        - name: airbyte-temporal
          image: temporalio/auto-setup:1.7.0
          ports:
            - containerPort: 7233
          volumeMounts:
            - name: airbyte-volume-configs
              mountPath: /configs
            - name: airbyte-volume-workspace
              mountPath: /workspace
      volumes:
        - name: airbyte-volume-workspace
          persistentVolumeClaim:
            claimName: airbyte-volume-workspace
        - name: airbyte-volume-configs
          persistentVolumeClaim:
            claimName: airbyte-volume-configs
