helm/airbyte/resources/webapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: airbyte-webapp-svc
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    airbyte: webapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airbyte-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      airbyte: webapp
  template:
    metadata:
      labels:
        airbyte: webapp
    spec:
      containers:
        - name: airbyte-webapp-container
          image: airbyte/webapp
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: nginx-conf
              subPath: nginx.conf
            # - mountPath: /etc/nginx/conf.d/default.conf
            #   name: domain-conf
            #   subPath: default.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.default
                path: nginx.conf
        # - name: domain-conf
        #   configMap:
        #     name: domain-conf
        #     items:
        #       - key: default.conf
        #         path: default.conf
