helm/airbyte/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360000"
    # nginx.ingress.kubernetes.io/proxy-next-upstream: "360000"
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: "360000"
    # nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "360000"
    # nginx.ingress.kubernetes.io/proxy-request-buffering: "360000"
spec:
  rules:
  - host: airbyte-stage.blotout.io
    http:
      paths:
      - path: /
        backend:
          serviceName: airbyte-webapp-svc
          servicePort: 80
# ---
# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: api-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     # nginx.ingress.kubernetes.io/auth-type: basic
#     # nginx.ingress.kubernetes.io/auth-secret: basic-auth
#     nginx.ingress.kubernetes.io/proxy-connect-timeout: "360000"
#     nginx.ingress.kubernetes.io/proxy-send-timeout: "360000"
#     nginx.ingress.kubernetes.io/proxy-read-timeout: "360000"
#     nginx.ingress.kubernetes.io/use-regex: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /api/$2
# spec:
#   rules:
#   - host: airbyte-stage.blotout.io
#     http:
#       paths:
#       - path: /api(/|$)(.*)
#         backend:
#           serviceName: airbyte-webapp-svc
#           servicePort: 80
